k8s/manifests/loan-demo-database-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  annotations:
  name: ${DATABASE_SERVICE_NAME}
spec:
  replicas: 1
  selector:
    name: ${DATABASE_SERVICE_NAME}
  strategy:
      type: Recreate
  template:
    metadata:
      labels:
      name: ${DATABASE_SERVICE_NAME}
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: ${DATABASE_SERVICE_NAME}
        - name: POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: ${DATABASE_SERVICE_NAME}
        - name: POSTGRESQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: database-name
              name: ${DATABASE_SERVICE_NAME}
        image: ${IMAGE_PULL_SPEC}
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /usr/libexec/check-container
            - --live
          initialDelaySeconds: 120
          timeoutSeconds: 10
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /usr/libexec/check-container
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            memory: ${MEMORY_LIMIT}
        securityContext:
          capabilities: {}
          privileged: false
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: "${DATABASE_DATA}"
          name: ${DATABASE_SERVICE_NAME}-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: ${DATABASE_SERVICE_NAME}-data
        persistentVolumeClaim:
          claimName: ${DATABASE_SERVICE_NAME}
