k8s/manifests/loan-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: loan-service
    app.kubernetes.io/instance: loan-service
    app.kubernetes.io/name: loan-service
    app.openshift.io/runtime-version: latest
  name: loan-service
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: loan-service
    deployment: loan-service
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
