k8s/manifests/create-loan-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: create-loan
  namespace: saga-loan-demo
spec:
  rules:
  - host: create-loan.apps.cluster-gfd2c.gfd2c.sandbox425.opentlc.com
    http:
      paths:
      - backend:
          service:
            name: create-loan
            port:
              number: 8080
        path: /
        pathType: Prefix
