k8s/manifests/loan-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan-service
  namespace: saga-loan-demo
spec:
  rules:
  - host: loan-service.apps.cluster-gfd2c.gfd2c.sandbox425.opentlc.com
    http:
      paths:
      - backend:
          service:
            name: loan-service
            port:
              number: 8080
        path: /sagaloandemo/loan
        pathType: Prefix
