k8s/manifests/lra-coordinator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lra-coordinator
  namespace: saga-loan-demo
spec:
  rules:
  - host: lra-coordinator.apps.cluster-gfd2c.gfd2c.sandbox425.opentlc.com
    http:
      paths:
      - backend:
          service:
            name: lra-coordinator
            port:
              number: 8080
        path: /
        pathType: Prefix
